# mov_avg

./: CMakeLists.txt  main.cpp  test_result.csv
src/: MovingAverage.cpp  MovingAverage.h
test/: TestFunctions.cpp  TestFunctions.h
